# 2026-p1-nownver

./: README.md  pyproject.toml
todo/: __init__.py
todo/views/: endpoints.http  routes.py
